# PX4-Offline-Tuner

./: .gitignore  PX4OfflineTuner_Operation_Report.md  README.md  RELEASE_README.txt  pyproject.toml
outputs/demo/: report.json  report.md
outputs/demo/pitch/: pitch_control.html  pitch_tracking.html
outputs/demo/roll/: roll_control.html  roll_tracking.html
outputs/demo/yaw/: yaw_control.html  yaw_tracking.html
outputs/demo_improved/: report.json  report.md
outputs/demo_improved/pitch/: pitch_control.html  pitch_tracking.html
outputs/demo_improved/roll/: roll_control.html  roll_tracking.html
outputs/demo_improved/yaw/: yaw_control.html  yaw_tracking.html
outputs/demo_improved_v2/: report.json  report.md
outputs/demo_improved_v2/pitch/: pitch_control.html  pitch_tracking.html
outputs/demo_improved_v2/roll/: roll_control.html  roll_tracking.html
outputs/demo_improved_v2/yaw/: yaw_control.html  yaw_tracking.html
outputs/multi_demo/: report.json  report.md
outputs/streamlit_run_20260412_164225/: report.json  report.md
sample_data/: demo_log.csv
scripts/: build_windows.ps1
src/px4_offline_tuner/: __init__.py  app_logging.py  cli.py  desktop.py  frequency.py  identification.py  io_utils.py  log_loader.py  models.py  persistence.py  pipeline.py  preprocessing.py  presentation.py  reporting.py  runtime_paths.py  selection.py  simulation.py  streamlit_runner.py  tuning.py  webapp.py
src/px4_offline_tuner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline.py  test_presentation.py
(+16 files in other folders)
